# url2md4ai

./: .gitignore  CHANGELOG.md  DOCKER_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
output/: 20250706-www-satispay-com-open-positions.html  satispay_clean_js.md
src/url2md4ai/: __init__.py  _cli.py  _exceptions.py  _extract.py  _fetch.py  _mcp.py  _postprocess.py  _render.py  cli.py  config.py  converter.py
src/url2md4ai/utils/: __init__.py  logger.py  rate_limiter.py
tests/: conftest.py  test_cli.py  test_core.py  test_extract.py  test_fetch.py  test_mcp.py  test_postprocess.py  test_render.py
tests/fixtures/: article.html  boilerplate.html  images.html  js_only.html  jsonld_spa.html  plain.md  tables.html
tests/unit/: test_config.py  test_converter.py
