[project]
name = "url2md4ai"
version = "2.0.0"
description = "Convert any URL into clean, token-efficient Markdown for LLMs. One thing, done well."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Saverio Mazza", email = "saverio3107@gmail.com" }]
requires-python = ">=3.12"
keywords = ["markdown", "llm", "web-scraping", "content-extraction", "mcp", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "httpx>=0.28",
    "trafilatura>=2.1",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.urls]
Repository = "https://github.com/mazzasaverio/url2md4ai"
Issues = "https://github.com/mazzasaverio/url2md4ai/issues"

[project.scripts]
url2md4ai = "url2md4ai._cli:main"
url2md4ai-mcp = "url2md4ai._mcp:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
